--- a/app/templates/post_det.html
+++ b/app/templates/post_det.html
@@ -54,6 +54,7 @@
                         <span style="color: red;">[ {{ error }} ]</span><br/>
                     {% endfor %}
                     {{ form.email(class="form-control") }}
+                    <small class="text-muted">Email is optional</small>
                 </div>
             </div>
         {% endif %}
