--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
-{% block title %}Forgot password{% endblock %}
+{% block title %}Forgot Password{% endblock %}
 
 {% block app_content %}
 <div class="col-12">
     <h1>Forgot Password</h1>
-    <p>
-        {{ form.email.label }}<br/>
-        {% for error in form.email.errors %}
-            <span style="color: red;">[ {{ error }} ]</span><br/>
-        {% endfor %}
-        {{ form.email(size=50) }}
-    </p>
-    <p>{{ form.submit() }}</p>
+    <form action="{{ url_for('forgot_password') }}"  method="post">
+        {{ form.csrf_token }}
+        <div class="form-row">
+            <div class="form-group col-lg-8">
+                {{ form.email.label }}
+                {% for error in form.email.errors %}
+                    <span style="color: red;">[ {{ error }} ]</span><br/>
+                {% endfor %}
+                {{ form.email(size=50) }}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-8">
+                {{ form.submit(class="btn btn-md btn-primary") }}
+            </div>
+        </div>
+    </form>
 </div>
 {% endblock %}
