--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,7 +36,7 @@
         </div>
     </form>
     <hr/>
-    <p><a href="{{ url_for('forgot_password') }}">Forgot Password</a> |
-    <a href="{{ url_for('register') }}">Register</a></p>
+    <p><small><a href="{{ url_for('forgot_password') }}">Forgot Password</a> |
+    <a href="{{ url_for('register') }}">Register</a></small></p>
 </div>
 {% endblock %}
