--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
 {% block app_content %}
 <div class="col-12">
     <h1>About Me</h1>
-    <p>Hi my name is Kevin and I have over 20 years of working experience in a
+    <p>My name is Kevin and I have over 20 years of working experience in a
         variety of IT related areas including software development, web design
         and information management. The latter in the area of library and information
         science. I recently started learning Python, at first because I wanted to get into data science,
@@ -20,7 +20,7 @@
             <li>Flask-Mail</li>
             <li>Flask-Migrate</li>
             <li>Flask-Moment</li>
-            <li>Flask-WTF</li>    
+            <li>Flask-WTF</li>
         </ul>
         <li>mySQL</li>
         <li>Bootstrap CSS</li>
