--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,7 @@
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="{{ url_for('add_post') }}">Add Post</a>
+                                            <a class="dropdown-item" href="{{ url_for('manage_messages') }}">View Messages</a>
                                             <a class="dropdown-item" href="{{ url_for('manage_tags') }}">Manage Tags</a>
                                             <a class="dropdown-item" href="#">Manage Page Banner</a>
                                         </div>
@@ -59,7 +60,7 @@
                                 <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                             {% endif %}
                         </ul>
-                        <button class="btn bg-light">Search</button>
+                        <!--<button class="btn bg-light">Search</button>-->
                     </div>
                 </div>
             </nav>
@@ -74,16 +75,16 @@
                 {% endif %}
             {% endwith %}
             <div class="container">
-                <div class="row pt-4">
+                <div class="row pt-4 pb-5">
                     {% block app_content %}{% endblock %}
                 </div>
             </div>
         {% endblock %}
 
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-dark">
             <div class="row">
                 <div class="col-12 p-5">
-                    <div class="d-flex justify-content-center"><small>&#169; 2019 kevin7.net</small></div>
+                    <div class="d-flex justify-content-center text-light"><small>&#169; 2019 kevin7.net</small></div>
                 </div>
             </div>
         </div>
