--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.username }}</p>
+<p>Dear {{ user.firstname }}</p>
 <p>
     To reset your password
     <a href="{{ url_for('reset_password', token=token, _external=True) }}">
@@ -10,5 +10,5 @@
 <p>If you have not requested a password reset simply ignore this message.</p>
 <p>Regards</p>
 <p>Kevin<br/>
-(kevinf7.pythonanywhere.com)
+(kevin7.net)
 </p>
