--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,23 +1,34 @@
 {% extends "base.html" %}
-{% block title %}Reset password{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block app_content %}
 <div class="col-12">
     <h1>Reset Password</h1>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=50) }}
-        {% for error in form.password.errors %}
-            <span style="color: red;">[ {{ error }} ]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password2.label }}<br>
-        {{ form.password2(size=50) }}
-        {% for error in form.password2.errors %}
-            <span style="color: red;">[ {{ error }} ]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit() }}</p>
+    <form action="{{ url_for('forgot_password') }}"  method="post">
+        {{ form.csrf_token }}
+        <div class="form-row">
+            <div class="form-group col-lg-8">
+                {{ form.password.label }}
+                {{ form.password(size=50) }}
+                {% for error in form.password.errors %}
+                    <span style="color: red;">[ {{ error }} ]</span>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-8">
+                {{ form.password2.label }}
+                {{ form.password2(size=50) }}
+                {% for error in form.password2.errors %}
+                    <span style="color: red;">[ {{ error }} ]</span>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-8">
+                {{ form.submit(class="btn btn-md btn-primary") }}
+            </div>
+        </div>
+    </form>
 </div>
 {% endblock %}
