--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -12,7 +12,7 @@
                 {% for error in form.email.errors %}
                     <span style="color: red;">[ {{ error }} ]</span><br/>
                 {% endfor %}
-                {{ form.email(size=50) }}
+                {{ form.email(class="form-control") }}
             </div>
         </div>
         <div class="form-row">
