--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -9,19 +9,19 @@
         <div class="form-row">
             <div class="form-group col-lg-8">
                 {{ form.password.label }}
-                {{ form.password(size=50) }}
                 {% for error in form.password.errors %}
                     <span style="color: red;">[ {{ error }} ]</span>
                 {% endfor %}
+                {{ form.password(class="form-control") }}
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-lg-8">
                 {{ form.password2.label }}
-                {{ form.password2(size=50) }}
                 {% for error in form.password2.errors %}
                     <span style="color: red;">[ {{ error }} ]</span>
                 {% endfor %}
+                {{ form.password2(class="form-control") }}
             </div>
         </div>
         <div class="form-row">
