--- a/app/templates/manage_message.html
+++ b/app/templates/manage_message.html
@@ -9,6 +9,7 @@
 
 {% block app_content %}
 <div class="col-12">
+    <h1>Manage Messages</h1>
     <p>Here are all the messages you have received via the contact form.</p>
     {% for msg in contacts.items %}
         <p>
