--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
             <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" type="text/css">
             <style>
             #jumbo {
-                background-image: url("{{ url_for('static',filename='images/photo-1460191269172-12c3ce6e8bfa.jpg') }}")
+                background-image: url("{{ url_for('static',filename='images/wm.jpg') }}")
             }
             </style>
         {% endblock %}
