--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -2329,9 +2329,9 @@ fieldset:disabled a.btn {
   border-radius: 0; }
 
 .btn-sm, .btn-group-sm > .btn {
-  padding: 0.2rem 0.4rem;
-  font-size: 0.7rem;
-  line-height: 1.2;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
   border-radius: 0; }
 
 .btn-block {
@@ -2594,8 +2594,8 @@ input[type="button"].btn-block {
     margin-right: 0; }
 
 .btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split {
-  padding-right: 0.3rem;
-  padding-left: 0.3rem; }
+  padding-right: 0.375rem;
+  padding-left: 0.375rem; }
 
 .btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
   padding-right: 0.75rem;
@@ -7708,5 +7708,10 @@ a.text-side_panel:hover, a.text-side_panel:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+.btn-xs {
+  padding: 0.2rem 0.4rem;
+  font-size: 0.7rem;
+  line-height: 1.2;
+  border-radius: 0; }
 
 /*# sourceMappingURL=app.css.map */
