--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,14 +17,14 @@
         {% if post.getTagNames() %}
             <p><small class="text-muted">Tags:</small>
             {% for tag_name in post.getTagNames() %}
-                <a href="{{ url_for('index',tag=tag_name) }}" class="btn btn-tags btn-sm" role="button">{{ tag_name }}</a>
+                <a href="{{ url_for('index',tag=tag_name) }}" class="btn btn-tags btn-xs" role="button">{{ tag_name }}</a>
             {% endfor %}
             </p>
         {% endif %}
         {% if current_user.is_authenticated and current_user == post.author %}
             <p>
-            <a href="{{ url_for('edit_post',id=post.id) }}" class="btn btn-admin btn-sm" role="button"/>edit</a>
-            <a href="{{ url_for('del_post',id=post.id) }}" class="btn btn-admin btn-sm" role="button"/>delete</a>
+            <a href="{{ url_for('edit_post',id=post.id) }}" class="btn btn-admin btn-xs" role="button"/>edit</a>
+            <a href="{{ url_for('del_post',id=post.id) }}" class="btn btn-admin btn-xs" role="button"/>delete</a>
             </p>
         {% endif %}
         {% if not loop.last %}
