--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -36,6 +36,11 @@
         </div>
         <div class="form-row">
             <div class="form-group col-lg-8">
+                <!-- form.recaptcha -->
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-8">
                 {{ form.submit(class="btn btn-md btn-primary") }}
             </div>
         </div>
