--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -36,7 +36,7 @@
         </div>
         <div class="form-row">
             <div class="form-group col-lg-8">
-                <!-- form.recaptcha -->
+                {{ form.recaptcha }}
             </div>
         </div>
         <div class="form-row">
