--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -37,6 +37,9 @@
         <div class="form-row">
             <div class="form-group col-lg-8">
                 {{ form.recaptcha }}
+                {% for error in form.recaptcha.errors %}
+                    <span style="color: red;">[ {{ error }} ]</span><br/>
+                {% endfor %}
             </div>
         </div>
         <div class="form-row">
