--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -54,6 +54,14 @@
         </div>
         <div class="form-row">
             <div class="form-group col-lg-6">
+                {{ form.recaptcha }}
+                {% for error in form.recaptcha.errors %}
+                    <span style="color: red;">[ {{ error }} ]</span><br/>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-6">
                 {{ form.submit(class="btn btn-md btn-primary") }}
             </div>
         </div>
