--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,11 @@
                                 <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                             {% endif %}
                         </ul>
-                        <!--<button class="btn bg-light">Search</button>-->
+
+                        <form action="{{ url_for('search') }}"  method="post">
+                            <input id="search_txt" name="search_txt" >
+                            <input class="btn btn-md btn-primary" type="submit" value="Search">
+                        </form>
                     </div>
                 </div>
             </nav>
